--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-starter",
+  "name": "webpack-leaflet-starter",
   "version": "1.0.0",
-  "description": "A light foundation for your next frontend project based on webpack.",
+  "description": "A light foundation for your next frontend project based on webpack and leaflet.",
   "scripts": {
     "build": "webpack --config webpack/webpack.config.prod.js  --colors",
     "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js"
@@ -18,10 +18,10 @@
     "javascript",
     "webdev"
   ],
-  "author": "webkid.io",
+  "author": "Robert Brimhall",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wbkd/webpack-starter/issues"
+    "url": ""
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
