--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-leaflet-starter",
+  "name": "webpack-esri-starter",
   "version": "1.0.0",
-  "description": "A light foundation for your next frontend project based on webpack and leaflet.",
+  "description": "A light foundation for your next frontend project based on webpack and Esri.",
   "scripts": {
     "build": "webpack --config webpack/webpack.config.prod.js  --colors",
     "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js"
@@ -47,7 +47,6 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "esri-leaflet": "^2.2.3",
-    "esri-leaflet-geocoder": "^2.2.13"
+    "esri-loader": "^2.10.0"
   }
 }
